Refractored other Service