@@ -27,8 +27,6 @@ public class GeocodingService {
     @Value("${google.api.key}")
     private String apiKey;
 
-    private final String GOOGLE_API_URL = "https://maps.googleapis.com/maps/api/geocode/json?address={address}&key={apiKey}";
-
     public Coordinates getCoordinates(String address) {
         log.info("Fetching coordinates for address: {}", address);
         Map<String, String> uriVariables = new HashMap<>();
@@ -36,12 +34,13 @@ public class GeocodingService {
         uriVariables.put("apiKey", apiKey);
 
         try {
+            String GOOGLE_API_URL = "https://maps.googleapis.com/maps/api/geocode/json?address={address}&key={apiKey}";
             ResponseEntity<GeocodingResponse> response = restTemplate.getForEntity(GOOGLE_API_URL, GeocodingResponse.class,uriVariables);
 
             if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
                 GeocodingResponse geocodingResponse = response.getBody();
                 if (geocodingResponse.getResults() != null && !geocodingResponse.getResults().isEmpty()) {
-                    GeocodingResponse.Location  location = geocodingResponse.getResults().get(0).getGeometry().getLocation();
+                    GeocodingResponse.Location  location = geocodingResponse.getResults().getFirst().getGeometry().getLocation();
                     Coordinates coords = new Coordinates();
                     coords.setLatitude(BigDecimal.valueOf(location.getLat()));
                     coords.setLongitude(BigDecimal.valueOf(location.getLng()));
